2014-01-27 arnaud.fontaine
* Clean up and make parameters names consistent with ERP5.

2014-01-27 arnaud.fontaine
* Increase delay before searching from 300ms (default) to 600ms, this should be enough...

2014-01-27 arnaud.fontaine
* Serialization of array was broken with ERP5.

2014-01-21 arnaud.fontaine
* Use json instead of deprecated Products.ERP5Type.JSON.

2010-08-04 nicolas.dumazet
* Initial import.