@@ -1,4 +1,7 @@
 2014-01-27 arnaud.fontaine
+* RelationField: Implement autocompletion and use it by default once erp5_autocompletion_ui is installed.
+
+2014-01-27 arnaud.fontaine
 * Clean up and make parameters names consistent with ERP5.
 
 2014-01-27 arnaud.fontaine
